# cmake

./: README.md
myCmake1/: CMakeLists.txt  README.md  StaticLib2.lib
myCmake2/: CMakeLists.txt  main.cpp
myCmake2/lib/: StaticLib2.lib
